--- a/_posts/2020-01-01-qa.md
+++ b/_posts/2020-01-01-qa.md
@@ -4,8 +4,8 @@ title:  "全部生命系列問與答"
 categories: [ 入門教學 ]
 tags: [featured]
 image: assets/images/11.jpg
-description: "qa"
-toc: true
+description: "desctiption只會顯示在這"
+
 ---
 
 
