--- a/_posts/2021-06-02-transfer.md
+++ b/_posts/2021-06-02-transfer.md
@@ -4,8 +4,8 @@ title:  "把部份全部生命課程從風潮轉到全部生命App"
 categories: [ App, 風潮 ]
 tags: [featured]
 image: assets/images/11.jpg
-description: "介紹"
-toc: true
+description: "desctiption只會顯示在這"
+
 ---
 
 親愛的大家，
