--- a/_posts/2020-01-01-qa.md
+++ b/_posts/2020-01-01-qa.md
@@ -3,7 +3,7 @@ layout: post
 title:  "全部生命系列問與答"
 categories: [ 入門教學 ]
 tags: [featured]
-description: "desctiption只會顯示在這"
+description: "description只會顯示在這"
 
 ---
 
