--- a/_posts/2021-06-01-app.md
+++ b/_posts/2021-06-01-app.md
@@ -4,7 +4,7 @@ title:  "全部生命App"
 categories: [ App , 入門教學 ]
 tags: [featured]
 image: https://totality-of-life.com/transfer/14_AppBanner.jpg
-description: "desctiption只會顯示在這"
+description: "description只會顯示在這"
 ---
 
 ## 簡單明了的專屬共修平台
