--- a/_posts/2020-01-01-overview.md
+++ b/_posts/2020-01-01-overview.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "簡介"
+title:  "什麼是全部生命？"
 subtitle: "書籍．音聲．淨化．生命場共振，楊定一博士全方位陪伴你我活出全部的生命"
 categories: [ 入門教學 ]
-tags: [featured]
+featured: true
 description: "description只會顯示在這"
 ---
 
