--- a/_posts/2020-01-02-app.md
+++ b/_posts/2020-01-02-app.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "全部生命App"
+title:  "使用全部生命App"
 categories: [ App , 入門教學 ]
-tags: [featured]
+featured: true
 image: https://totality-of-life.com/transfer/14_AppBanner.jpg
 description: "description只會顯示在這"
 ---
@@ -11,11 +11,12 @@ description: "description只會顯示在這"
 
 報名課程請到[全部生命購課網站](https://store.totality-of-life.com)。
 
-### 安裝/更新 App：<br>
+### 安裝/更新 App
+
 [iOS 蘋果：https://reurl.cc/MZennn](https://apps.apple.com/us/app/%E5%85%A8%E9%83%A8%E7%94%9F%E5%91%BD/id1562059559)<br>
 [Android 安卓：https://reurl.cc/qmEM90](https://play.google.com/store/apps/details?id=app.totality)<br>
 
-### App 2.7 特色：{#Feature}
+### App 2.7 特色
 - 附「練習」標籤，方便從共修音檔中找出可以重複多次的練習
 - 同步收聽功能（可選擇開啟或關閉）
 - 課程試聽功能
@@ -36,7 +37,7 @@ App往前支援至 iOS14 和 Android 5.0。記得設定自動更新喔～
 
 ### App使用教學
 
-#### 更新App/登入{#download}
+#### 更新App/登入
 **登入**　由App主頁左上角「登入」進入。填入自己的手機號→發送驗證碼→收簡訊→填入驗證碼，完成登入。<br>
 
 **帳號頁在哪裡？**　登入後，點App主頁左上角「圓形人像」進入帳號頁，會看到自己的手機號碼、6位數字驗證碼（驗證碼會自動更新）。這組號碼在購課網站或將風潮的課程轉移到App時會用到<br>
