--- a/_posts/2021-06-02-transfer.md
+++ b/_posts/2021-06-02-transfer.md
@@ -1,9 +1,8 @@
 ---
 layout: post
-title:  "把部份全部生命課程從風潮轉到全部生命App"
+title:  "轉移風潮線上課程"
 categories: [ App, 風潮 ]
-tags: [featured]
-image: assets/images/11.jpg
+featured: true
 description: "description只會顯示在這"
 
 ---
