--- a/content/2021-06-01-app.md
+++ b/content/2021-06-01-app.md
@@ -1,5 +1,6 @@
 +++
 title = "全部生命App"
+description="todo"
 template = "page.html"
 +++
 ![banner](https://totality-of-life.com/transfer/14_AppBanner.jpg)
